; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViSetSkip.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViSetSkip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@skip = common dso_local global i64 0, align 8
@MESSAGE_OFFSET_EN = common dso_local global i64 0, align 8
@MESSAGE_OFFSET_JP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ViSetSkip() #0 {
  store i64 0, i64* @skip, align 8
  %1 = call i32 (...) @MsIsCurrentUserLocaleIdJapanese()
  %2 = icmp eq i32 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i64, i64* @MESSAGE_OFFSET_EN, align 8
  %5 = load i64, i64* @MESSAGE_OFFSET_JP, align 8
  %6 = sub nsw i64 %4, %5
  store i64 %6, i64* @skip, align 8
  br label %7

7:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @MsIsCurrentUserLocaleIdJapanese(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
